# tsp/tsp-output/schema/openapi.yaml
@@ -20,12 +20,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  data:
-                    $ref: '#/components/schemas/Auth'
-                required:
-                  - data
+                $ref: '#/components/schemas/Auth'
         '400':
           description: The server could not understand the request due to invalid syntax.
           content:
@@ -70,12 +65,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  data:
-                    $ref: '#/components/schemas/Auth'
-                required:
-                  - data
+                $ref: '#/components/schemas/Auth'
         '400':
           description: The server could not understand the request due to invalid syntax.
           content:
@@ -126,12 +116,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  data:
-                    $ref: '#/components/schemas/Auth'
-                required:
-                  - data
+                $ref: '#/components/schemas/Auth'
         '400':
           description: The server could not understand the request due to invalid syntax.
           content:
@@ -182,12 +167,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  data:
-                    $ref: '#/components/schemas/TodoList'
-                required:
-                  - data
+                $ref: '#/components/schemas/TodoList'
         '400':
           description: The server could not understand the request due to invalid syntax.
           content:
@@ -231,12 +211,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  data:
-                    $ref: '#/components/schemas/Todo'
-                required:
-                  - data
+                $ref: '#/components/schemas/Todo'
         '400':
           description: The server could not understand the request due to invalid syntax.
           content:
@@ -292,12 +267,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  data:
-                    $ref: '#/components/schemas/Todo'
-                required:
-                  - data
+                $ref: '#/components/schemas/Todo'
         '400':
           description: The server could not understand the request due to invalid syntax.
           content:
@@ -331,7 +301,7 @@ paths:
       tags:
         - API Service
         - Todos
-    patch:
+    put:
       operationId: Todos_update
       description: Update a widget
       parameters:
@@ -346,12 +316,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  data:
-                    $ref: '#/components/schemas/Todo'
-                required:
-                  - data
+                $ref: '#/components/schemas/Todo'
         '400':
           description: The server could not understand the request due to invalid syntax.
           content:
@@ -440,6 +405,8 @@ paths:
       tags:
         - API Service
         - Todos
+security:
+  - BearerAuth: []
 components:
   schemas:
     Auth:
@@ -562,6 +529,8 @@ components:
         total: 2
     UpdateTodoRequest:
       type: object
+      required:
+        - title
       properties:
         title:
           type: string
@@ -597,6 +566,10 @@ components:
     uuid:
       type: string
       format: uuid
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
 servers:
   - url: http://localhost:4000
     description: production
